# quad_gk

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: coef.rs  config.rs  integral.rs  lib.rs  quad.rs
src/coef/: gk11.rs  gk21.rs  gk31.rs  gk41.rs  gk51.rs  gk61.rs  gk71.rs  gk81.rs  gk91.rs
src/quad/: quad_1d.rs  quad_2d.rs  quad_3d.rs  quad_4d.rs
