[package]
name = "quad_gk"
version = "1.0.0"
author = "qdot3"
edition = "2021"

description = "Pure rust numerical integration library based on Gauss Kronrod quadrature rule."

documentation = "https://docs.rs/quad_gk/"
homepage = "https://crates.io/crates/quad_gk"
repository = "https://github.com/qdot3/quad_gk.git"

readme = "README.md"

keywords = ["math", "integral", "quadrature"]
categories = ["science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
